--- a/Source/Apollo_MVC_FMX.fmx
+++ b/Source/Apollo_MVC_FMX.fmx
@@ -1,4 +1,4 @@
-object Form1: TForm1
+object ViewFMXBase: TViewFMXBase
   Left = 0
   Top = 0
   Caption = 'Form1'
@@ -7,5 +7,6 @@ object Form1: TForm1
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
+  OnCreate = FormCreate
   DesignerMasterStyle = 0
 end
