--- a/Source/Apollo_MVC_FMX.fmx
+++ b/Source/Apollo_MVC_FMX.fmx
@@ -10,4 +10,9 @@ object ViewFMXBase: TViewFMXBase
   FormFactor.Devices = [Desktop]
   OnClose = FormClose
   DesignerMasterStyle = 0
+  object WaitCursor: TFDGUIxWaitCursor
+    Provider = 'FMX'
+    Left = 256
+    Top = 16
+  end
 end
